Switch default back to surface sequences on Android.

This CL switches Android to use surface sequences instead of surface
references by default. This is due to an increase in the number of
missing surfaces. The --enable-surface-references flag turns on surface
references if necessary.

This CL is temporary and will be reverted after it is verified on canary
and merged to M62.

Bug: 764460, 757569
Change-Id: Ic0782dd09fbdc2b7064ee3b1d2d4287ab5c73005
Reviewed-on: https://chromium-review.googlesource.com/665697
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501828}
Former-commit-id: ca224d466239318c18a99fcebe64b6937bbd51aa